--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             </div>
             <div class="col-md-4">
               <div class="cat2 d-flex justify-content-between align-items-center">
-                <h1>Watch</h1>
+                <h1>Bag</h1>
                 <img src="images/categories/bag.png" alt="Bag">
               </div>
             </div>
             <div class="col-md-4">
               <div class="cat3 d-flex justify-content-between align-items-center">
-                <h1>Watch</h1>
+                <h1>Shoes</h1>
                 <img src="images/categories/shoes.png" alt="Shoes">
               </div>
             </div>
